--- a/openpgp/Cargo.toml
+++ b/openpgp/Cargo.toml
@@ -1,4 +1,7 @@
 [package]
+# Implementing v6 OpenPGP requires breaking the API.  Prevent
+# accidental publishing.
+publish = false
 name = "sequoia-openpgp"
 description = "OpenPGP data types and associated machinery"
 version = "1.14.0"
