--- a/net/Cargo.toml
+++ b/net/Cargo.toml
@@ -30,8 +30,8 @@ http = "0.2"
 hyper = { version = "0.14.10", features = [ "http1", "http2" ] }
 hyper-tls = "0.5"
 libc = "0.2.66"
-native-tls = "0.2.0"
 percent-encoding = "2.1"
+reqwest = "0.11"
 tempfile = "3.1"
 thiserror = "1.0.2"
 url = "2.1"
