--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,3 +10,7 @@ rustflags = [
           "-Aclippy::try-err",
           "-Aclippy::unnecessary-lazy-evaluations",
 ]
+
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
