--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,5 +10,5 @@ rustflags = [
           "-Aclippy::redundant-clone",
           "-Aclippy::try-err",
           "-Aclippy::unnecessary-lazy-evaluations",
-	  "-Clink-arg=-fuse-ld=/usr/bin/mold",
+	  "-C", "link-arg=-fuse-ld=/usr/bin/mold",
 ]
