--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,7 +1,6 @@
 [target.'cfg(all())']
 # Note: if the RUSTFLAGS environment variable is set, this will be
 # ignored.
-linker = "clang"
 rustflags = [
           "-Dwarnings",
           "-Aunused-parens",
@@ -10,5 +9,8 @@ rustflags = [
           "-Aclippy::redundant-clone",
           "-Aclippy::try-err",
           "-Aclippy::unnecessary-lazy-evaluations",
-	  "-C", "link-arg=-fuse-ld=/usr/bin/mold",
 ]
+
+[target.x86_64-pc-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
